<resources>
    <string name="app_name">Fitness Go</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_main">Fitness Go</string>

    <string name="hello_blank_fragment" />


    <string name="not_close_enough">Not close enough.</string>
    <string name="_meters_still_to_go">meters still to go!</string>
    <string name="meters_from_start_pos">meters away from the start</string>
    <string name="loading_first_location">Loading first location…</string>
    <string name="in_this_round_you_have_to_run">In this round you have to run</string>
    <string name="meters">meters</string>
    <string name="this_round_is">This round is</string>
    <string name="_points">%1$d points</string>
    <string name="leaderboard_entry">%1$s %2$s: %3$d \n</string>
    <string name="_0_points">Loading points…</string>
    <string name="generate_new_target_btn">New target</string>
    <string name="claim_points_btn">Claim points</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="leaderboard_detailed">See who has the most points</string>
    <string name="profile_settings">Profile settings</string>
    <string name="profile_settings_detail">Choose a unique username</string>
    <string name="run_the_city">Run the city</string>
    <string name="run_the_city_detail">Reach checkpoints and get score</string>
    <string name="email_is_required">Email is required</string>
    <string name="enter_a_valid_email">Please enter a valid email</string>
    <string name="pw_must_be_at_least_8_chars">Password must be at least 8 characters long</string>
    <string name="pw_is_required">Password is required</string>
    <string name="set_a_unique_username">Set a unique username</string>
    <string name="log_out">Log out</string>
    <string name="save_username">Save username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">Email address</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now</string>
    <string name="load_points">Load points</string>
    <string name="save_points">Save points</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_scored_">You scored</string>
    <string name="congratulations_you_scored__points">Congratulations! You scored %1$d points</string>
    <string name="congratulations_one_point">Congratulations! You earned a point!</string>
    <string name="congratulations_zero_points">Congratulations! You finished this round, but try to be faster, so next time you\'ll earn some points!</string>
    <string name="start_next_round">Start next round</string>

</resources>
