<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:orientation="vertical"
        android:weightSum="100">

        <TextView
            android:id="@+id/tvUserPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:gravity="center"
            android:text="@string/_0_points"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTargetAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:gravity="center"
            android:text="@string/loading_first_location"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="horizontal">

            <com.ornach.nobobutton.NoboButton
                android:id="@+id/btnNewTarget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="10"
                app:nb_backgroundColor="#8bc34a"
                app:nb_drawableResource="@drawable/ic_refresh_white_24dp"
                app:nb_iconPadding="6dp"
                app:nb_radius="14dp"
                app:nb_text="@string/generate_new_target_btn"
                app:nb_textColor="#FFFFFF"
                app:nb_textSize="14sp"
                app:nb_textStyle="bold" />

            <com.ornach.nobobutton.NoboButton
                android:id="@+id/btnClaimPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="10"
                app:nb_backgroundColor="#f99809"
                app:nb_drawableResource="@drawable/ic_target_white_24dp"
                app:nb_iconPadding="6dp"
                app:nb_radius="14dp"
                app:nb_text="@string/claim_points_btn"
                app:nb_textColor="#FFFFFF"
                app:nb_textSize="14sp"
                app:nb_textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSavePts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/save_points" />

            <Button
                android:id="@+id/btnLoadPts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/load_points" />

        </LinearLayout>

    </LinearLayout>

    <fragment xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        tools:context=".ui.MapsActivity" />
</LinearLayout>